--- a/Eimer_portfolioVer2.html
+++ b/Eimer_portfolioVer2.html
@@ -12,7 +12,7 @@
   <title>Eimer Adames</title>
   <style>
     header{
-      background: url(img/Batman_beyond_procreate.jpg);
+      background: url(img/Untitled_Artwork\ 2.jpg);
       background-size: cover;
       background-position: center;
       min-height: 1000px;
@@ -40,7 +40,7 @@
   <header>
     <nav class="nav-wrapper transparent">
       <div class="container">
-        <a href="#" class="brand-logo">Portfolio</a>
+        <a href="https://github.com/Eimer87/Homework07" class="brand-logo">Homework07</a>
         <a href="#" class="sidenav-trigger" data-target="mobile-menu">
           <i class="material-icons">menu</i>
         </a>
@@ -48,14 +48,14 @@
           
           <li><a href="#projects">projects</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="https://github.com/Eimer87?tab=repositories" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Github"> 
+          <li><a href="https://github.com/Eimer87?tab=repositories" class="tooltipped btn-floating btn-small black darken-4" data-position="bottom" data-tooltip="Github"> 
             <i class="fab fa-github"></i>
           </a></li>
-          <li><a href="https://www.instagram.com" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Instagram">
+          <li><a href="https://www.instagram.com" class="tooltipped btn-floating btn-small black darken-4" data-position="bottom" data-tooltip="Instagram">
             <i class="fab fa-instagram"></i>
           </a></li>
-          <li><a href="https://twitter.com" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Twitter">
-            <i class="fab fa-twitter"></i>
+          <li><a href="www.linkedin.com/in/eimer-adames-292b951b3" class="tooltipped btn-floating btn-small black darken-4" data-position="bottom" data-tooltip="Linkedin">
+            <i class="fab fa-linkedin"></i>
           </a></li>
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
@@ -74,7 +74,7 @@
           <img src="img/portrait.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="indigo-text text-darken-4">Portraits</h2>
+        <h2 class="black-text text-darken-4">Portraits</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
@@ -83,7 +83,7 @@
           <img src="img/city.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
-        <h2 class="indigo-text text-darken-4">Cityscapes</h2>
+        <h2 class="black-text text-darken-4">Cityscapes</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
@@ -92,7 +92,7 @@
           <img src="img/nature.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="indigo-text text-darken-4">Nature</h2>
+        <h2 class="black-text text-darken-4">Nature</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
@@ -101,7 +101,7 @@
   <!-- parallax -->
   <div class="parallax-container">
     <div class="parallax">
-      <img src="img/street.jpg" alt="" class="responsive-img">
+      <img src="img/Untitled_Artwork 3.jpg" alt="" class="responsive-img">
     </div>
   </div>
 
@@ -141,7 +141,7 @@
   <!-- parallax -->
   <div class="parallax-container">
     <div class="parallax">
-      <img src="img/stars.jpg" alt="" class="responsive-img">
+      <img src="img/Untitled_Artwork 4.jpg" alt="" class="responsive-img">
     </div>
   </div>
 
@@ -207,9 +207,8 @@
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#">Facebook</a></li>
-            <li><a class="grey-text text-lighten-3" href="#">Github</a></li>
-            <li><a class="grey-text text-lighten-3" href="#">Linked In</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/Eimer87?tab=repositories">Github</a></li>
+            <li><a class="grey-text text-lighten-3" href="www.linkedin.com/in/eimer-adames-292b951b3">Linked In</a></li>
             <li><a class="grey-text text-lighten-3" href="#">Instagram</a></li>
           </ul>
         </div>
