--- a/Eimer_portfolioVer2.html
+++ b/Eimer_portfolioVer2.html
@@ -40,13 +40,13 @@
   <header>
     <nav class="nav-wrapper transparent">
       <div class="container">
-        <a href="https://github.com/Eimer87/Homework07" class="brand-logo">Homework07</a>
+        <a href="https://github.com/Eimer87/Homework07" class="brand-logo">Eimer Adames</a>
         <a href="#" class="sidenav-trigger" data-target="mobile-menu">
           <i class="material-icons">menu</i>
         </a>
         <ul class="right hide-on-med-and-down">
           
-          <li><a href="#projects">projects</a></li>
+          <li><a href="#photos">Homework</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="https://github.com/Eimer87?tab=repositories" class="tooltipped btn-floating btn-small black darken-4" data-position="bottom" data-tooltip="Github"> 
             <i class="fab fa-github"></i>
@@ -54,7 +54,7 @@
           <li><a href="https://www.instagram.com" class="tooltipped btn-floating btn-small black darken-4" data-position="bottom" data-tooltip="Instagram">
             <i class="fab fa-instagram"></i>
           </a></li>
-          <li><a href="www.linkedin.com/in/eimer-adames-292b951b3" class="tooltipped btn-floating btn-small black darken-4" data-position="bottom" data-tooltip="Linkedin">
+          <li><a href="https://www.linkedin.com/in/eimer-adames-292b951b3?trk=people-guest_people_search-card" class="tooltipped btn-floating btn-small black darken-4" data-position="bottom" data-tooltip="Linkedin">
             <i class="fab fa-linkedin"></i>
           </a></li>
         </ul>
@@ -70,21 +70,21 @@
   <!-- photo / grid -->
   <section class="container section scrollspy" id="photos">
     <div class="row">
-      <div class="col s12 l4">
+      <div class="col s12 l4 ">
           <img src="img/portrait.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="black-text text-darken-4">Portraits</h2>
+        <h2 class="black-text text-darken-4">Homework02</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
     <div class="row">
-      <div class="col s12 l4 offset-l1 push-l7">
-          <img src="img/city.jpg" alt="" class="responsive-img materialboxed">
+      <div class="col s12 l4 offset-l1 push-l7 z-depth-3">
+          <img src="img/boringquiz1.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
-        <h2 class="black-text text-darken-4">Cityscapes</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        <h2 class="black-text text-darken-4">Homework04</h2>
+        <p>The Boring Quiz.</p>
       </div>
     </div>
     <div class="row">
@@ -92,7 +92,7 @@
           <img src="img/nature.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="black-text text-darken-4">Nature</h2>
+        <h2 class="black-text text-darken-4">Homework07</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
@@ -110,17 +110,17 @@
     <div class="row">
       <div class="col s12 l4">
         <h2 class="indigo-text text-darken-4">What I do..</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        <p>I'm a graphic design major looking towards branching into webdesign.</p>
         <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae scelerisque erat ornare nec.</p>
       </div>
       <div class="col s12 l6 offset-l2">
         <!-- tabs -->
         <ul class="tabs">
           <li class="tab col s6">
-            <a href="#photography" class="active indigo-text text-darken-4">Art Work</a>
+            <a href="#graphic design" class="active indigo-text text-darken-4">Graphic Design</a>
           </li>
           <li class="tab col s6">
-            <a href="#editing" class="indigo-text text-darken-4">Editing</a>
+            <a href="#web design" class="indigo-text text-darken-4">Web Design</a>
           </li>
         </ul>
         <div id="photography" class="col s12">
@@ -208,7 +208,7 @@
           <h5 class="white-text">Connect</h5>
           <ul>
             <li><a class="grey-text text-lighten-3" href="https://github.com/Eimer87?tab=repositories">Github</a></li>
-            <li><a class="grey-text text-lighten-3" href="www.linkedin.com/in/eimer-adames-292b951b3">Linked In</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/eimer-adames-292b951b3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BXoY0XUKJRlmXF7t%2F3TFSHQ%3D%3D">Linked In</a></li>
             <li><a class="grey-text text-lighten-3" href="#">Instagram</a></li>
           </ul>
         </div>
