--- a/Eimer_portfolioVer2.html
+++ b/Eimer_portfolioVer2.html
@@ -70,8 +70,8 @@
   <!-- photo / grid -->
   <section class="container section scrollspy" id="photos">
     <div class="row">
-      <div class="col s12 l4 ">
-          <img src="img/portrait.jpg" alt="" class="responsive-img materialboxed">
+      <div class="col s12 l4 z-depth+4 ">
+          <img src="img/App screen shot 2.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
         <h2 class="black-text text-darken-4">Homework02</h2>
@@ -79,7 +79,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col s12 l4 offset-l1 push-l7 z-depth-3">
+      <div class="col s12 l4 offset-l1 push-l7 z-depth-4">
           <img src="img/boringquiz1.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
@@ -89,10 +89,10 @@
     </div>
     <div class="row">
       <div class="col s12 l4">
-          <img src="img/nature.jpg" alt="" class="responsive-img materialboxed">
+          <img src="img/App screen shot.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="black-text text-darken-4">Homework07</h2>
+        <h2 class="black-text text-darken-4">Homework06</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
       </div>
     </div>
