--- a/Eimer_portfolioVer2.html
+++ b/Eimer_portfolioVer2.html
@@ -93,7 +93,7 @@
       </div>
       <div class="col s12 l6 offset-l1">
         <h2 class="black-text text-darken-4">Homework06</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        <p>Simple weather app.</p>
       </div>
     </div>
   </section>
